1.3.11
	+ Added report support
1.3.6
	+ Bug fix: Disable cache in Group Policy base to be able to fetch new groups in
	  "Group" select
	+ Bug fix: no more duplicated log for the same URL
	+ UI improvement: precondition in objects and user polices
1.3.5
	+ tableInfo returns an array of hash refs
	+ Bugfix: group policies are deleted when the group is deleted
	+ Bugfix: added notification when antivirus is enabled to assure
	that we have a correct configuration
1.1.30
	+ Added to Traffic details report _noAggregateFileds and fixed bug
	with defaultController
	+ Bugfix: HTTPS traffic tunneled correctly
1.1.20
	+ Disable PICs ratings by default
	+ logs are sesrchable by user
1.1.10
	+ Change default dansguardian conf to make it work with dansguardian 2.9.9.7
1.0
	+ new release
0.12.100
	+ New release
	+ Added user based authorization
	+ Added filter profiles
	+ Added group polices
	+ Added time period option to policies
	+ Added per-object group policies
	+ Added antivirus support
	+ Added dansguardian's custom logrotate file
	+ Added cache exceptions
	+ Added cache size
	+ Disabled exception and banned phrases to avoid uncontrolled
	content filter results
0.12.99
	+ Add support for reporting
	+ User support
	+ Exemption for cache option added
	+ Adapted to objects with overlapping addresses
0.12
	+ Use the new EBox::Model::Row api
	+ Add field help to models
	+ Fix titles within tabs
	+ Set deny as default policy
0.11.101
	+ New release
0.11.100
	+ Use the new syntax to enable transparent proxy
	+ Do not launch dansguardian with setsid. It was necessary with runit,
	  but not with upstart any more.
	+ do not remove rc scripts, stop on pre-start
0.11.99
	+ Set proper language to show denied access page by dansguardian
	using eBox locale (Currently manually maintained)
0.11.1
	+ Bugfix. MIME and extension filter allow attribute is NOT
	optional but they have a default value
O.11
	+ New release
0.10.99
	+ Use new model/view framework. UI uses Ajax