@@ -3,7 +3,7 @@
 Migrationsdir = @DATADIR@/ebox-squid/migration
 
 
-nobase_Migrations_SCRIPTS = 0001_replace_deprecated_gconf_keys.pl 0002_policies_with_timeperiod.pl 0003_migrate_to_default_profile.pl 0004_migrate_report_tables.pl 0005_update_db_fields.pl
+nobase_Migrations_SCRIPTS = 0001_replace_deprecated_gconf_keys.pl 0002_policies_with_timeperiod.pl 0003_migrate_to_default_profile.pl 0004_migrate_report_tables.pl 0005_update_db_fields.pl 0006_rename_access.pl
 
 
 EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
