@@ -1,3 +1,5 @@
+HEAD
+	+ Bug fix: Added migration to rename access table to squid_access.
 1.3.11
 	+ Added report support
 1.3.6
